Added a simple getter to LedgerEntity, updated summary logic for LedgerRepository, and reconfigured CSVManager to use a constructor. NeedsRepository also now has a loadNeeds method (#27)